[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "loudify_worker"
author = "Martyn van Dijke"
author-email = "martijnvdijke600@gmail.com"
home-page = "https://github.com/martynvdijke/loudify-worker"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

