[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "loudify_worker"
dist-name = "loudify-worker"
author = "Martyn van Dijke"
author-email = "martijnvdijke600@gmail.com"
home-page = "https://github.com/martynvdijke/loudify-worker"
requires=[
    "flit_core>=2.2.0",
    "coloredlogs",
    "setuptools_scm"
]
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

[tool.black]
line-length = 100

[tool.flit.scripts]
loudify-worker = "loudify_worker:main"